# tenpy

./: .coverage  .flake8  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .style.yapf  .travis.yml  AUTHORS.txt  CHANGELOG.rst  MANIFEST.in  README.rst  __init__.py  cleanup.sh  compile.sh  environment.yml  environment_other.yml  notebooks  output.txt  pyproject.toml  pytest.ini  requirements-doc.txt  requirements-extra.txt  requirements-min.txt  requirements-plot.txt  requirements.txt  setup.cfg  setup.py  toycodes  version.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  paper-using-tenpy.md
.github/workflows/: code-coverage.yml  code_coverage.yml  doc-build.yml  linting.yml  print_coverage_in_PR.yml  publish-pypi.yml  publish-test-pypi.yml  publish.yml  pytest.yml  pytest_old_numpy.yml  pythonpackage.yml  test-notebooks.yml
algorithms/: __init__.py
algorithms/linalg/: .gitignore  LA_tools.py  np_conserved.py  npc_helper.pyx  npc_setup.py  svd_dgesvd.py  svd_zgesvd.py
cyten/: .flake8  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  cleanup.sh  conftest.py  environment.yml  pyproject.toml
cyten/.github/workflows/: linting.yml  pytest_numpy.yml  pytest_torch.yml
cyten/cyten/: __init__.py  dummy_config.py  version.py
cyten/cyten/backends/: __init__.py  _backend.py  abelian.py  backend_factory.py  fusion_tree_backend.py  no_symmetry.py
cyten/cyten/block_backends/: __init__.py  _block_backend.py  array_api.py  dtypes.py  numpy.py  torch.py
cyten/cyten/models/: __init__.py  couplings.py  degrees_of_freedom.py  sites.py  tenpy_models.py
cyten/cyten/symmetries/: __init__.py  _su2data.py  _symmetries.py  spaces.py  trees.py
cyten/cyten/tensors/: __init__.py  _tensors.py  krylov_based.py  planar.py  sparse.py
cyten/cyten/testing/: __init__.py  asserting.py  random_generation.py
cyten/cyten/tools/: __init__.py  cost_polynomials.py  hdf5_io.py  mappings.py  math.py  misc.py  random_matrix.py  string.py
cyten/docs/: Doxyfile  INSTALL.rst  Makefile  README.md  conf.py  cpp.rst  environment.yml  index.rst  introductions.rst  main.rst  make.bat
cyten/docs/guidelines/: code_style.rst
cyten/docs/intro/: overview.rst
cyten/docs/sphinx/static/: custom.css
cyten/docs/sphinx/templates/: layout.html
cyten/docs/sphinx/templates/autosummary/: base.rst  class.rst
cyten/include/: check.h
cyten/models/: couplings.py
cyten/pybind/: CMakeLists.txt  core.cpp
cyten/src/: CMakeLists.txt  check.cpp
cyten/tests/linting/: python_linting.py
cyten/tests/python_tests/: __init__.py  test_check.py  test_devices.py  test_krylov_based.py  test_planar.py  test_spaces.py  test_sparse.py  test_symmetries.py  test_tensors.py  test_toycodes.py  test_trees.py
cyten/tests/python_tests/backends/: test_fusion_tree_backend.py
cyten/tests/python_tests/models/: __init__.py  test_couplings.py  test_site.py
cyten/tests/python_tests/tools/: io_test.py  test_hdf5.py  test_tools.py
cyten/toycodes/tenpy_toycodes/: a_mps.py  b_model.py  d_dmrg.py
doc/: .gitignore  INSTALL.rst  IntroNpc.rst  Makefile  bibtex.json  changes_TeNPy.rst  changes_TenPy.rst  commandline-help.txt  conf.py  contributing.rst  contribution.rst  environment.yml  examples.rst  index.rst  intro_JordanWigner.rst  intro_model.rst  intro_npc.rst  introductions.rst  license.rst  literature.bib  literature.rst  main.rst  overview.rst  papers_using_tenpy.bib  papers_using_tenpy.rst  readme_wrap.rst  reference.rst  releases.rst  requirements.txt  theses.bib  todo.rst  troubleshooting.rst  userguide.rst
doc/_static/: copybutton.css  custom.css  custom_highlight.css
doc/changelog/: _latest.rst  iss_597.txt  latest.rst  latest.txt  latest_template.txt  pr_507_mpo_envs.txt  pr_603.txt  pr_609.txt  prev_tenpy.rst  template.txt  v0.10.0.rst  v0.11.0.rst  v0.2.0.rst  v0.3.0.rst  v0.4.0.rst  v0.4.1.rst  v0.5.0.rst  v0.6.0.rst  v0.6.1.rst  v0.7.0.rst  v0.7.1.rst  v0.7.2.rst  v0.8.0.rst  v0.8.1.rst  v0.8.2.rst  v0.8.3.rst  v0.8.4.rst  v0.9.0.rst  v0.99.0.rst  v1.0.0.rst  v1.0.1.rst  v1.0.2.rst  v1.0.3.rst  v1.0.4.rst  v1.0.5.rst  v1.0.6.rst  v1.0.7.rst  v1.1.0.rst
doc/contr/: build_doc.rst  guidelines.rst  (+2 more)
docs/: INSTALL.rst  IntroNpc.rst  Makefile  changes_TenPy.rst  conf.py  contribution.rst  install.rst  setup.tex  todo.rst  userguide.rst
examples/: .gitignore  01_mps_intro.py  a_np_conserved.py  a_simple_1_MPS.py  a_simple_2_model.py  a_simple_3_TEBD.py  a_simple_4_DMRG.py  b_intro_1_npc.py  b_intro_2_mps.py  b_intro_3_TEBD.py  b_intro_4_DMRG.py  b_mps.py  c_tebd.py  central_charge_ising.py  d_dmrg.py  e_tdvp.py  exactdiag.py  model_custom.py  mpo_exponential_decay.py  mps_intro.py  npc_intro.py  npc_intro_mod.py  purification.py  simulation_custom.yml  test_tdvp.py  tfi_exact.py  xxz_corrlength.py  xxz_groundstate.py  z_exact_diag.py
tenpy/: __init__.py  __main__.py  version.py
tests/: conftest.py  linting.py  npc_benchmark.py  random_test.py  tdvp_numpy.py  test_MPO_LP_RP_iterative.py  test_add_hcs.py  test_cbe.py  test_charges.py  test_consistencies.py  test_cs_projection.py  test_dmrg.py  test_exact_diag.py  test_examples.py  test_fermion_model.py  test_krylov_based.py  test_lanczos.py  test_lattice.py  test_linalg_groups.py  test_linalg_spaces.py  test_linalg_symmetries.py  test_linalg_tensors.py  test_model.py  test_model_aklt.py  test_model_bose_hubbbard.py  test_model_bosehubbard.py  test_model_clock.py  test_model_fermihubbard.py  test_model_fermion_chain.py  test_model_fermions_hubbard.py  test_model_fermions_spinless.py  test_model_haldane.py  test_model_hofstadter.py  test_model_hubbard.py  test_model_mixed_xk.py  test_model_molecular.py  test_model_pxp.py  test_model_spins.py  test_model_spins_nnn.py  test_model_tf_ising.py  (+35 more)
tmp_tdvp/: a_zero.py  compare.py  run.py  tdvp.py  tdvp_fast.py  test_expend.py
tools/: .gitignore  math.py  string.py
toycodes/: .gitignore  a_mps.py  b_model.py  c_tebd.py  d_dmrg.py  e_tdvp.py  lanczos.py  tfi_exact.py
two_sites/: misc.py  tdvp.py  tdvp_fast.py  tebd.py  test_tdvp_tenpy.py
(+499 files in other folders)
