[metadata]
name = physics-tenpy
url = https://github.com/tenpy/tenpy
license = GPLv3
license_files = LICENSE
project_urls =
    Source Code=https://github.com/tenpy/tenpy
    Documentation=https://tenpy.github.io/
    Bug Tracker=https://github.com/tenpy/tenpy/issues
    User Forum=https://tenpy.johannes-hauschild.de
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
author = TeNPy Developer Team
maintainer = Johannes Hauschild
maintainer_email = tenpy@johannes-hauschild.de
description = Simulation of quantum many-body systems with tensor networks in Python
long_description = README.rst
long_description_content_type = text/x-rst
version = attr: tenpy.__version__

[options]
packages = find:

[aliases]
test = pytest

[tool:pytest]
filterwarnings = always
